2004-04-06  Richard Hult  <richard@imendio.com>

	* data/ui/gantt-view.ui:
	* data/ui/resource-view.ui:
	* data/ui/task-view.ui:
	* data/ui/time-table-view.ui: Add tooltips, patch from Setul
	Patel. Fixes bug #130937.

2004-04-06  Richard Hult  <richard@imendio.com>

	* data/dtd/mrproject-0.6.dtd:
	* data/glade/task-dialog.glade:
	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/html1_tasks.xsl:
	* docs/sql/database-0.11.sql:
	* docs/sql/upgrade-0.6.x-0.11.sql:
	* libplanner/mrp-old-xml.c:
	* libplanner/mrp-parser.c:
	* libplanner/mrp-sql.c:
	* libplanner/mrp-task.c:
	* src/planner-task-dialog.c: Fix bug #137544, task priority
	spinner not effective. Patch from Lincoln Phipps.

2004-04-06  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-task-manager.c: (task_manager_do_backward_pass):
	Fix bug #137063, higlight critical tasks and sub-tasks. Patch from
	Doroszlai Attila. This also fixes bug #138437.

2004-04-06  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-row.c:
	* src/planner-task-tree.c:
	* src/planner-task-tree.h: Fix bug #132910, open task properties
	by double-clicking gantt bar and bug #132916, select task by
	clicking gantt bar. Patch from Chris Ladd.
	
2004-04-04 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-tree.c: implemented task remove undo
	Currently recovers the task, the position in the tasks tree 
	the task relations and the resources assignments.

2004-03-29  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-old-xml.c (old_xml_read_assignment): Be more
	robust.

	* src/planner-gantt-row.c (gantt_row_event): Patch from Doroszlai
	Attila to fix popup position.

	* src/planner-gantt-model.c: (gantt_model_get_column_type),
	(gantt_model_get_value):
	* src/planner-gantt-model.h:
	* src/planner-gantt-view.c: (gantt_view_create_widget):
	* src/planner-task-tree.c: (task_tree_wbs_data_func),
	(task_tree_add_column):
	* src/planner-task-view.c: (get_widget): Clean up wbs patch,
	change id to wbs.
